# Snek

./: CMakeLists.txt
include/: enums.h
include/Snake/: SnakeBody.h  SnakePart.h
src/: main.cpp
src/Snake/: SnakeBody.cpp  SnakePart.cpp
